<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="10sp"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/clSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivLogo"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/search_for"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/ivClearSearch"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/buttonColor"
                    android:text="@string/search" />

                <Space
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

                <Button
                    android:id="@+id/btnRandom"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:backgroundTint="@color/buttonColor"
                    android:text="@string/random" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginBottom="4sp"
        app:layout_constraintBottom_toTopOf="@id/tvCopyright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTop">

        <ImageView
            android:id="@+id/ivMainImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bwlions" />

        <ProgressBar
            android:id="@+id/pvLoadingArtwork"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvArtworks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>